[gd_scene load_steps=9 format=3 uid="uid://drg4fkor54j4"]

[ext_resource type="Script" path="res://entities/characters/player.gd" id="1_arrur"]
[ext_resource type="Texture2D" uid="uid://dhcqy23gi38xw" path="res://entities/characters/player.png" id="2_wr55l"]
[ext_resource type="Script" path="res://entities/characters/player_crash_collider.gd" id="3_keq70"]
[ext_resource type="Script" path="res://state_machine/state_machine.gd" id="4_qac0x"]
[ext_resource type="Script" path="res://entities/characters/running_state.gd" id="5_d8hdh"]
[ext_resource type="Script" path="res://entities/characters/gliding_state.gd" id="6_rtbub"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2ydwu"]
radius = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_qjhpb"]
radius = 1.0

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_arrur")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -5)
texture = ExtResource("2_wr55l")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_2ydwu")

[node name="PlayerCrashCollider" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 12
script = ExtResource("3_keq70")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCrashCollider"]
shape = SubResource("CircleShape2D_qjhpb")

[node name="MovementStateMachine" type="Node" parent="." node_paths=PackedStringArray("current_state", "entity")]
script = ExtResource("4_qac0x")
current_state = NodePath("GlidingState")
entity = NodePath("..")

[node name="GlidingState" type="Node" parent="MovementStateMachine"]
script = ExtResource("6_rtbub")

[node name="RunningState" type="Node" parent="MovementStateMachine"]
script = ExtResource("5_d8hdh")

[connection signal="area_entered" from="PlayerCrashCollider" to="PlayerCrashCollider" method="_on_area_entered"]
[connection signal="area_exited" from="PlayerCrashCollider" to="PlayerCrashCollider" method="_on_area_exited"]
[connection signal="body_entered" from="PlayerCrashCollider" to="PlayerCrashCollider" method="_on_body_entered"]
[connection signal="body_exited" from="PlayerCrashCollider" to="PlayerCrashCollider" method="_on_body_exited"]
